--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.0.0",
+    "babel-preset-es2015": "^6.24.1",
     "cross-env": "^5.2.0",
-    "nuxt": "^2.0.0",
-    "koa": "^2.5.2",
     "element-ui": "^2.4.6",
-    "@nuxtjs/axios": "^5.0.0"
+    "koa": "^2.5.2",
+    "node-sass": "^4.11.0",
+    "nuxt": "^2.0.0",
+    "sass-loader": "^7.1.0"
   },
   "devDependencies": {
     "nodemon": "^1.11.0",
